<?xml version="1.0"?>
<package format="3">
  <name>tb3_mpc_controller</name>
  <version>0.0.1</version>
  <description>TurtleBot3 MPC controller node implemented in C++</description>

  <maintainer email="rush@example.com">rush</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>